FastCharge: FastCharge between 500mA ~ 1300mA supported

--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -491,3 +491,4 @@ CONFIG_CRC_CCITT=y
 # CONFIG_MSM_SMD_DEBUG is not set
 # CONFIG_MFD_PM8XXX_DEBUG is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
+CONFIG_FORCE_FAST_CHARGE=y
