--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -106,8 +106,10 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_LOW_CPUCLOCKS=y
+CONFIG_OC_ULTIMATE=y
+CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
