--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1683,7 +1683,7 @@ config MSM_CPU_FREQ_MIN
 
 endif # CPU_FREQ_MSM
 
-config CPU_LOW_CPUCLOCKS
+config LOW_CPUCLOCKS
 	bool "Enable ultra low CPU clocks"
 	default n
 	help
@@ -1707,6 +1707,12 @@ config CPU_VOLTAGE_TABLE
 	default n
 	help
 	  Krait User Voltage Control
+
+config GPU_OVERCLOCK
+	bool "Enable GPU Overclocking option"
+	default n
+	help
+	  APQ8064 GPU overclocking 
 
 config MSM_CPU_AVS
 	bool "Enable software controlled Adaptive Voltage Scaling (AVS)"
