Revert to code from release 9 for stability. Update defconfig for GPU overclock

--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -111,6 +111,7 @@ CONFIG_LOW_CPUCLOCKS=y
 CONFIG_OC_ULTIMATE=y
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
