--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -1,7 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-KD-Kernel-r11"
-# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="-perf"
 CONFIG_SYSVIPC=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -104,14 +103,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_LOW_CPUCLOCKS=y
-CONFIG_OC_ULTIMATE=y
-CONFIG_CPU_OVERCLOCK=y
-CONFIG_CPU_VOLTAGE_TABLE=y
-CONFIG_GPU_OVERCLOCK=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -494,4 +486,3 @@ CONFIG_CRC_CCITT=y
 # CONFIG_MSM_SMD_DEBUG is not set
 # CONFIG_MFD_PM8XXX_DEBUG is not set
 # CONFIG_DEBUG_BUGVERBOSE is not set
-CONFIG_FORCE_FAST_CHARGE=y
