--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1689,6 +1689,12 @@ config CPU_OVERCLOCK
 	help
 	  Krait overclocking up to 1.836GHz
 
+config CPU_VOLTAGE_TABLE
+	bool "Enable CPU voltage table via sysfs for adjustments"
+	default n
+	help
+	  Krait user voltage control
+
 config MSM_CPU_AVS
 	bool "Enable software controlled Adaptive Voltage Scaling (AVS)"
 	depends on (ARCH_MSM_SCORPION && QSD_SVS)
