--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -107,6 +107,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CPU_IDLE=y
