Update defconfig to include intelli-plug

--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -112,6 +112,7 @@ CONFIG_CPU_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CPU_IDLE=y
 CONFIG_GPU_OVERCLOCK=y
+CONFIG_INTELLI_PLUG=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
