--- a/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
+++ b/arch/arm/configs/msm8960_ef49k_tp25_perf_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="_KD-Kernel"
+CONFIG_LOCALVERSION="_KD-Kernel-r12"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_IKCONFIG=y
